--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,9 @@
 ---
-# defaults file for ansible-docker
+# Docker Compose options.
+docker_install_compose: False
+docker_compose_version: "1.21.2"
+docker_compose_path: /usr/local/bin/docker-compose
+
+docker_apt_release_channel: stable
+docker_apt_repository: "deb [arch=amd64] https://download.docker.com/linux/{{ ansible_distribution|lower }} {{ ansible_distribution_release }} {{ docker_apt_release_channel }}"
+
