--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,8 +10,8 @@ galaxy_info:
   platforms:
   - name: Ubuntu
     versions:
-    - 16.04
-    - 18.04
+    - bionic
+    - xenial
   galaxy_tags:
     - docker
     - containers
